# gcb-runner

./: .dockerignore  DEPLOYMENT-CHECKLIST.md  Dockerfile.build-linux  README.md  build-linux.sh  pyproject.toml
.github/workflows/: build-linux.yml
gcb_runner/: __init__.py  cli.py  config.py  export.py  judge.py  menu.py  results.py  runner.py  updater.py
gcb_runner/api/: __init__.py  cache.py  client.py
gcb_runner/backends/: __init__.py  anthropic.py  common.py  lmstudio.py  ollama.py  openai.py  openrouter.py
gcb_runner/viewer/: __init__.py  dashboard.py  report.py  server.py
scripts/: build.py  generate_hashes.py
tests/: __init__.py  test_cache.py  test_config.py  test_export.py  test_judge.py
